# vision-recognizer

./: .coverage-baseline.toml  .gitignore  .gitleaks.toml  .markdownlint.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  lychee.toml  typos.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/adr/: 0001-base64-crate-non-canon.md
scripts/: local-extras.sh  post-install.sh  pre-push-ci.sh  release-restart.sh
src/: lib.rs  main.rs  main_mcp.rs  mcp.rs  openai_vision.rs  video.rs
tests/: mcp_integration.rs  video_integration.rs  vision_client_integration.rs
