[package]
name = "vision-recognizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vision-recognizer"
path = "src/main.rs"

[[bin]]
name = "vision-recognizer-mcp"
path = "src/main_mcp.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "1", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[package.metadata.cargo-machete]
# serde_json: required by rmcp proc-macros (tool schema generation) — not directly imported in src
ignored = ["serde_json"]
